    - Set beacon effects based on blueprint tags
    - Fix slider being in the wrong position when opening the gui
    - Support cloning
    - Fix module lamp base pixels still being visible
    - Update description and dependencies
    - Explain that quality is divided by 10
    - Support editor extentions
    - Give the beacons during `/cheat all` regardless of ee
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 01. 29
  Info:
    - Prepare for small scale module insertion test
    - Read the positive bits as expected
    - Insert modules based on the bits
    - Bodge broken negative values
    - Remember values in struct, and (thus) support setting multiple effects at once
    - Fix icon cropping crime
    - Still make quality modules without the feature flag, but without the effect
    - Set the minmax back to their full bounds
    - This seems to work
    - Good night peter panda
    - Zoom in on thumbnail
    - Ensure there is enough space to have them all at -1
    - Refer to the modules as bit instead of level
    - Add selftest using the speed effect
    - Give the slider some convenient steps
    - Move the slider when the textfield changes
    - Clamp strength from textfield
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 01. 28
  Info:
    - Lock distribution efficiency at 1
    - Prepare tracking structs and plan out the gui
    - Update textfield when using the slider left to it
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 01. 28
  Info:
    - Swap the module slot for a compilatron
    - Cover the shadow on the other side of the beacon
    - Add thumbnail
    - Generate all the module we'll need
    - Allow the beacon to use all compilatron modules