@@ -43,7 +43,7 @@ for _, effect in ipairs(shared.effects) do
       localised_name = {"item-name." .. mod_prefix .. "module", effect, two_character_number},
 
       stack_size = 1,
-      flags = {"not-stackable"},
+      flags = {"not-stackable", "only-in-cursor"},
 
       category = module_category.name,
       tier = i,
