@@ -17,6 +17,7 @@ Date: ????
     - Explain that quality is divided by 10
     - Support editor extentions
     - Give the beacons during `/cheat all` regardless of ee
+    - Prevent players & bots from interacting with the modules themselves
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2025. 01. 29
